# frisky

./: CMakeLists.txt  README.md  obfshell.ps1
src/: CMakeLists.txt
src/cpp/: main.cpp  utils.cpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/game/cpp/: game.cpp  main.cpp
src/game/hpp/: game.hpp
src/hpp/: utils.hpp
